# Animation-Software-Engineering-Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MathTest[1]_include.cmake  README.md  cmake_install.cmake
CurveNet_autogen/: moc_predefs.h
include/: CornerStruct.h  Curve.h  Intersection.h  Mesh.h  NGLScene.h  Segment.h  Segments.h  Spline.h  mersh.h
src/: Curve.cpp  Intersection.cpp  Mesh.cpp  NGLScene.cpp  Segment.cpp  Spline.cpp  main.cpp  mersh.cpp
tests/: Test.cpp
